--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container mx-auto px-6 text-center">
             <h1 class="text-5xl font-bold text-gray-800">Hello, I'm Kevin Pramudya</h1>
             <p class="text-gray-600 mt-4 text-xl">A passionate developer who loves to create amazing web experiences.</p>
-            <img alt="A professional portrait of Kevin Pramudya" class="mx-auto mt-6 rounded-lg shadow-lg" height="400" src="https://storage.googleapis.com/a1aa/image/0Vly1D63xPKYM5VP1x9WesavTKk9XFvIOMdQzbbmCXDDB37JA.jpg" width="600"/>
+            <img alt="A professional portrait of Kevin Pramudya" class="mx-auto mt-6 rounded-lg shadow-lg" height="400" src="" width="600"/>
         </div>
     </section>
     <section class="bg-gray-100 py-20" id="about">
